--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "livechat",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://MorriganLoveKarrigan.github.io/live-chat",
+  "homepage": "https://MorriganLoveKarrigan.github.io/live-chat",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
